Yannicks npj accepted

--- a/src/publications.bib
+++ b/src/publications.bib
@@ -1,8 +1,9 @@
 @article{al-Badri2020,
-  title = {Superexchange Mechanism and Quantum Many Body Excitations in the Archetypal Di-{{Cu}} Oxo-Bridge},
+  title = {Superexchange mechanism and quantum many body excitations in the archetypal di-{{Cu}} oxo-bridge},
   author = {family=Badri, given=Mohamed Ali, prefix=al-, useprefix=true and Linscott, Edward and Georges, Antoine and Cole, Daniel J. and Weber, Cédric},
   date = {2020-01-13},
-  journaltitle = {Commun. Phys.},
+  journaltitle = {Communications Physics},
+  shortjournal = {Commun. Phys.},
   volume = {3},
   number = {1},
   pages = {1--8},
@@ -14,10 +15,11 @@
 }
 
 @article{Burgess2023,
-  title = {{{DFT}}+{{U-type}} Functional Derived to Explicitly Address the Flat Plane Condition},
+  title = {{{DFT}}+{{U-type}} functional derived to explicitly address the flat plane condition},
   author = {Burgess, Andrew C. and Linscott, Edward and O'Regan, David D.},
   date = {2023-03-30},
-  journaltitle = {Phys. Rev. B},
+  journaltitle = {Physical Review B},
+  shortjournal = {Phys. Rev. B},
   volume = {107},
   number = {12},
   pages = {L121115},
@@ -27,10 +29,11 @@
 }
 
 @article{Burgess2023a,
-  title = {The Convexity Condition of Density-Functional Theory},
+  title = {The convexity condition of density-functional theory},
   author = {Burgess, Andrew C. and Linscott, Edward and O’Regan, David D.},
   date = {2023-12-01},
-  journaltitle = {J. Chem. Phys.},
+  journaltitle = {The Journal of Chemical Physics},
+  shortjournal = {J. Chem. Phys.},
   volume = {159},
   number = {21},
   pages = {211102},
@@ -40,10 +43,11 @@
 }
 
 @article{Burgess2024,
-  title = {Tilted-Plane Structure of the Energy of Finite Quantum Systems},
+  title = {Tilted-plane structure of the energy of finite quantum systems},
   author = {Burgess, Andrew C. and Linscott, Edward and O’Regan, David D.},
   date = {2024-07-12},
-  journaltitle = {Phys. Rev. Lett.},
+  journaltitle = {Physical Review Letters},
+  shortjournal = {Phys. Rev. Lett.},
   volume = {133},
   number = {2},
   pages = {026404},
@@ -53,10 +57,11 @@
 }
 
 @article{Colonna2022,
-  title = {Koopmans Spectral Functionals in Periodic Boundary Conditions},
+  title = {Koopmans spectral functionals in periodic boundary conditions},
   author = {Colonna, Nicola and De Gennaro, Riccardo and Linscott, Edward and Marzari, Nicola},
   date = {2022-09-13},
-  journaltitle = {J. Chem. Theory Comput.},
+  journaltitle = {Journal of Chemical Theory and Computation},
+  shortjournal = {J. Chem. Theory Comput.},
   volume = {18},
   number = {9},
   pages = {5435--5448},
@@ -67,11 +72,12 @@
 }
 
 @article{DeGennaro2022,
-  title = {Bloch's Theorem in Orbital-Density-Dependent Functionals: {{Band}} Structures from {{Koopmans}} Spectral Functionals},
-  shorttitle = {Bloch's Theorem in Orbital-Density-Dependent Functionals},
+  title = {Bloch's theorem in orbital-density-dependent functionals: {{Band}} structures from {{Koopmans}} spectral functionals},
+  shorttitle = {Bloch's theorem in orbital-density-dependent functionals},
   author = {De Gennaro, Riccardo and Colonna, Nicola and Linscott, Edward and Marzari, Nicola},
   date = {2022-07-05},
-  journaltitle = {Phys. Rev. B},
+  journaltitle = {Physical Review B},
+  shortjournal = {Phys. Rev. B},
   volume = {106},
   number = {3},
   pages = {035106},
@@ -81,7 +87,7 @@
 }
 
 @article{Edgcombe2019,
-  title = {Analysis of a Capped Carbon Nanotube by Linear-Scaling Density-Functional Theory},
+  title = {Analysis of a capped carbon nanotube by linear-scaling density-functional theory},
   author = {Edgcombe, C.J. and Masur, S.M. and Linscott, E.B. and Whaley-Baldwin, J.A.J. and Barnes, C.H.W.},
   date = {2019},
   journaltitle = {Ultramicroscopy},
@@ -94,11 +100,12 @@
 }
 
 @article{Haddadi2024,
-  title = {On-Site and Intersite {{Hubbard}} Corrections in Magnetic Monolayers: {{The}} Case of {{FePS}}₃ and {{CrI}}₃},
-  shorttitle = {On-Site and Intersite {{Hubbard}} Corrections in Magnetic Monolayers},
+  title = {On-site and intersite {{Hubbard}} corrections in magnetic monolayers: {{The}} case of {{FePS}}₃ and {{CrI}}₃},
+  shorttitle = {On-site and intersite {{Hubbard}} corrections in magnetic monolayers},
   author = {Haddadi, Fatemeh and Linscott, Edward and Timrov, Iurii and Marzari, Nicola and Gibertini, Marco},
   date = {2024-01-24},
-  journaltitle = {Phys. Rev. Mater.},
+  journaltitle = {Physical Review Materials},
+  shortjournal = {Phys. Rev. Mater.},
   volume = {8},
   number = {1},
   pages = {014007},
@@ -108,10 +115,11 @@
 }
 
 @article{Ingall2024,
-  title = {Accurate and Efficient Computation of the Fundamental Bandgap of the Vacancy-Ordered Double Perovskite {{Cs}}₂{{TiBr}}₆},
+  title = {Accurate and efficient computation of the fundamental bandgap of the vacancy-ordered double perovskite {{Cs}}₂{{TiBr}}₆},
   author = {Ingall, J. E. and Linscott, Edward and Colonna, Nicola and Page, Alister J. and Keast, Vicki J.},
   date = {2024-06-06},
-  journaltitle = {J. Phys. Chem. C},
+  journaltitle = {The Journal of Physical Chemistry C},
+  shortjournal = {J. Phys. Chem. C},
   volume = {128},
   number = {22},
   pages = {9217--9228},
@@ -122,10 +130,11 @@
 }
 
 @article{Kobayashi2021,
-  title = {Virtual Computational Chemistry Teaching Laboratories — Hands-on at a Distance},
+  title = {Virtual computational chemistry teaching laboratories — hands-on at a distance},
   author = {Kobayashi, Rika and Goumans, Theodorus P. M. and Carstensen, N. Ole and Soini, Thomas M. and Marzari, Nicola and Timrov, Iurii and Poncé, Samuel and Linscott, Edward B. and Sewell, Christopher J. and Pizzi, Giovanni and Ramirez, Francisco and Bercx, Marnik and Huber, Sebastiaan P. and Adorf, Carl S. and Talirz, Leopold},
   date = {2021-10-12},
-  journaltitle = {J. Chem. Educ.},
+  journaltitle = {Journal of Chemical Education},
+  shortjournal = {J. Chem. Educ.},
   volume = {98},
   number = {10},
   pages = {3163--3171},
@@ -136,10 +145,11 @@
 }
 
 @article{Lee2022,
-  title = {Many-Body Study of Iron({{III}})-Bound Human Serum Transferrin},
+  title = {Many-body study of iron({{III}})-bound human serum transferrin},
   author = {Lee, Hovan and Weber, Cedric and Linscott, Edward B.},
   date = {2022-05-26},
-  journaltitle = {J. Phys. Chem. Lett.},
+  journaltitle = {The Journal of Physical Chemistry Letters},
+  shortjournal = {J. Phys. Chem. Lett.},
   volume = {13},
   number = {20},
   pages = {4419--4425},
@@ -149,10 +159,11 @@
 }
 
 @article{Linscott2014,
-  title = {Thermally Activated Local Collapse of a Flattened Dipolar Condensate},
+  title = {Thermally activated local collapse of a flattened dipolar condensate},
   author = {Linscott, E. B. and Blakie, P. B.},
   date = {2014},
-  journaltitle = {Phys. Rev. A},
+  journaltitle = {Physical Review A},
+  shortjournal = {Phys. Rev. A},
   volume = {90},
   number = {5},
   eprint = {1409.1766v1},
@@ -164,10 +175,11 @@
 
 @article{Linscott2018,
   ids = {Linscott2018a},
-  title = {Role of Spin in the Calculation of {{Hubbard U}} and {{Hund}}'s {{J}} Parameters from First Principles},
+  title = {Role of spin in the calculation of {{Hubbard U}} and {{Hund}}'s {{J}} parameters from first principles},
   author = {Linscott, Edward B. and Cole, Daniel J. and Payne, Michael C. and O'Regan, David D.},
   date = {2018-12-26},
-  journaltitle = {Phys. Rev. B},
+  journaltitle = {Physical Review B},
+  shortjournal = {Phys. Rev. B},
   volume = {98},
   number = {23},
   pages = {235157},
@@ -178,10 +190,11 @@
 
 @article{Linscott2020,
   ids = {Linscott2019},
-  title = {{{ONETEP}} + {{TOSCAM}}: {{Uniting}} Dynamical Mean Field Theory and Linear-Scaling Density Functional Theory},
+  title = {{{ONETEP}} + {{TOSCAM}}: {{Uniting}} dynamical mean field theory and linear-scaling density functional theory},
   author = {Linscott, Edward B. and Cole, Daniel J. and Hine, Nicholas D. M. and Payne, Michael C. and Weber, Cédric},
   date = {2020-06-09},
-  journaltitle = {J. Chem. Theory Comput.},
+  journaltitle = {Journal of Chemical Theory and Computation},
+  shortjournal = {J. Chem. Theory Comput.},
   eprint = {1911.07752},
   eprinttype = {arXiv},
   publisher = {American Chemical Society (ACS)},
@@ -191,11 +204,12 @@
 }
 
 @article{Linscott2023,
-  title = {Koopmans: {{An}} Open-Source Package for Accurately and Efficiently Predicting Spectral Properties with {{Koopmans}} Functionals},
-  shorttitle = {Koopmans},
+  title = {koopmans: {{An}} open-source package for accurately and efficiently predicting spectral properties with {{Koopmans}} functionals},
+  shorttitle = {koopmans},
   author = {Linscott, Edward B. and Colonna, Nicola and De Gennaro, Riccardo and Nguyen, Ngoc Linh and Borghi, Giovanni and Ferretti, Andrea and Dabo, Ismaila and Marzari, Nicola},
   date = {2023-08-23},
-  journaltitle = {J. Chem. Theory Comput.},
+  journaltitle = {Journal of Chemical Theory and Computation},
+  shortjournal = {J. Chem. Theory Comput.},
   volume = {19},
   number = {20},
   pages = {7097--7111},
@@ -206,10 +220,11 @@
 }
 
 @article{Masur2020,
-  title = {Modelling a Capped Carbon Nanotube by Linear-Scaling Density-Functional Theory},
+  title = {Modelling a capped carbon nanotube by linear-scaling density-functional theory},
   author = {Masur, S. M. and Linscott, E. B. and Edgcombe, C. J.},
   date = {2020-05-01},
-  journaltitle = {J. Electron Spectrosc. Relat. Phenom.},
+  journaltitle = {Journal of Electron Spectroscopy and Related Phenomena},
+  shortjournal = {J. Electron Spectrosc. Relat. Phenom.},
   series = {Sources, {{Interaction}} with {{Matter}}, {{Detection}} and {{Analysis}} of {{Low Energy Electrons}} ({{SIMDALEE2}})},
   volume = {241},
   pages = {146896},
@@ -220,10 +235,11 @@
 }
 
 @article{Moore2024,
-  title = {High-Throughput Determination of {{Hubbard U}} and {{Hund J}} Values for Transition Metal Oxides via the Linear Response Formalism},
+  title = {High-throughput determination of {{Hubbard U}} and {{Hund J}} values for transition metal oxides via the linear response formalism},
   author = {Moore, Guy C. and Horton, Matthew K. and Linscott, Edward and Ganose, Alexander M. and Siron, Martin and O'Regan, David D. and Persson, Kristin A.},
   date = {2024-01-29},
-  journaltitle = {Phys. Rev. Mater.},
+  journaltitle = {Physical Review Materials},
+  shortjournal = {Phys. Rev. Mater.},
   volume = {8},
   number = {1},
   pages = {014409},
@@ -233,10 +249,11 @@
 }
 
 @article{Prentice2020,
-  title = {The {{ONETEP}} Linear-Scaling Density Functional Theory Program},
+  title = {The {{ONETEP}} linear-scaling density functional theory program},
   author = {Prentice, Joseph C. A. and Aarons, Jolyon and Womack, James C. and Allen, Alice E. A. and Andrinopoulos, Lampros and Anton, Lucian and Bell, Robert A. and Bhandari, Arihant and Bramley, Gabriel A. and Charlton, Robert J. and Clements, Rebecca J. and Cole, Daniel J. and Constantinescu, Gabriel and Corsetti, Fabiano and Dubois, Simon M.-M. and Duff, Kevin K. B. and Escartín, José María and Greco, Andrea and Hill, Quintin and Lee, Louis P. and Linscott, Edward and O’Regan, David D. and Phipps, Maximillian J. S. and Ratcliff, Laura E. and Serrano, Álvaro Ruiz and Tait, Edward W. and Teobaldi, Gilberto and Vitale, Valerio and Yeung, Nelson and Zuehlsdorff, Tim J. and Dziedzic, Jacek and Haynes, Peter D. and Hine, Nicholas D. M. and Mostofi, Arash A. and Payne, Mike C. and Skylaris, Chris-Kriton},
   date = {2020-05-07},
-  journaltitle = {J. Chem. Phys.},
+  journaltitle = {The Journal of Chemical Physics},
+  shortjournal = {J. Chem. Phys.},
   volume = {152},
   number = {17},
   pages = {174111},
@@ -248,10 +265,11 @@
 }
 
 @article{Schubert2023,
-  title = {Testing {{Koopmans}} Spectral Functionals on the Analytically Solvable {{Hooke}}’s Atom},
+  title = {Testing {{Koopmans}} spectral functionals on the analytically solvable {{Hooke}}’s atom},
   author = {Schubert, Yannick and Marzari, Nicola and Linscott, Edward},
   date = {2023-04-12},
-  journaltitle = {J. Chem. Phys.},
+  journaltitle = {The Journal of Chemical Physics},
+  shortjournal = {J. Chem. Phys.},
   volume = {158},
   number = {14},
   pages = {144113},
@@ -260,14 +278,14 @@
   abstract = {Koopmans spectral functionals are a class of orbital-density-dependent functionals designed to accurately predict spectroscopic properties. They do so markedly better than their Kohn–Sham density-functional theory counterparts, as demonstrated in earlier works on benchmarks of molecules and bulk systems. This work is a complementary study where—instead of comparing against real, many-electron systems—we test Koopmans spectral functionals on Hooke’s atom, a toy two-electron system that has analytical solutions for particular strengths of its harmonic confining potential. As these calculations clearly illustrate, Koopmans spectral functionals do an excellent job of describing Hooke’s atom across a range of confining potential strengths. This work also provides broader insights into the features and capabilities of Koopmans spectral functionals more generally.}
 }
 
-@online{Schubert2024,
-  title = {Predicting Electronic Screening for Fast {{Koopmans}} Spectral Functional Calculations},
+@article{Schubert2024,
+  title = {Predicting electronic screening for fast {{Koopmans}} spectral functional calculations},
   author = {Schubert, Yannick and Luber, Sandra and Marzari, Nicola and Linscott, Edward},
-  date = {2024-11-14},
+  date = {2024-11-29},
+  journaltitle = {npj Comp. Mater. (accepted)},
   eprint = {2406.15205},
   eprinttype = {arXiv},
   doi = {10.48550/arXiv.2406.15205},
   abstract = {Koopmans spectral functionals are a powerful extension of Kohn-Sham density-functional theory (DFT) that enable the prediction of spectral properties with state-of-the-art accuracy. The success of these functionals relies on capturing the effects of electronic screening through scalar, orbital-dependent parameters. These parameters have to be computed for every calculation, making Koopmans spectral functionals more expensive than their DFT counterparts. In this work, we present a machine-learning model that -- with minimal training -- can predict these screening parameters directly from orbital densities calculated at the DFT level. We show on two prototypical use cases that using the screening parameters predicted by this model, instead of those calculated from linear response, leads to orbital energies that differ by less than 20 meV on average. Since this approach dramatically reduces run-times with minimal loss of accuracy, it will enable the application of Koopmans spectral functionals to classes of problems that previously would have been prohibitively expensive, such as the prediction of temperature-dependent spectral properties. More broadly, this work demonstrates that measuring violations of piecewise linearity (i.e. curvature in total energies with respect to occupancies) can be done efficiently by combining frozen-orbital approximations and machine learning.},
-  pubstate = {prepublished},
   keywords = {Condensed Matter - Materials Science,Physics - Chemical Physics,Physics - Computational Physics}
 }
