--- a/my_publications.bib
+++ b/my_publications.bib
@@ -1,15 +1,17 @@
 @article{al-Badri2020,
   title = {Superexchange mechanism and quantum many body excitations in the archetypal di-{{Cu}} oxo-bridge},
-  author = {family=Badri, given=Mohamed Ali, prefix=al-, useprefix=true and Linscott, Edward and Georges, Antoine and Cole, Daniel J. and Weber, Cédric},
-  date = {2020-01-13},
-  journaltitle = {Communications Physics},
-  shortjournal = {Commun. Phys.},
+  author = {{al-Badri}, Mohamed Ali and Linscott, Edward and Georges, Antoine and Cole, Daniel J. and Weber, Cédric},
+  year = {2020},
+  month = jan,
+  journal = {Communications Physics},
   volume = {3},
   number = {1},
   pages = {1--8},
   publisher = {Nature Publishing Group},
   issn = {2399-3650},
   doi = {10.1038/s42005-019-0270-1},
+  urldate = {2024-11-15},
+  copyright = {2020 The Author(s)},
   langid = {english},
   keywords = {Biological physics,Chemical physics,Electronic properties and materials}
 }
@@ -17,57 +19,62 @@
 @article{Burgess2023,
   title = {{{DFT}}+{{U-type}} functional derived to explicitly address the flat plane condition},
   author = {Burgess, Andrew C. and Linscott, Edward and O'Regan, David D.},
-  date = {2023-03-30},
-  journaltitle = {Physical Review B},
-  shortjournal = {Phys. Rev. B},
+  year = {2023},
+  month = mar,
+  journal = {Physical Review B},
   volume = {107},
   number = {12},
   pages = {L121115},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevB.107.L121115},
-  abstract = {A DFT+U-type corrective functional is derived from first principles to enforce the flat plane condition on localized subspaces, thus dispensing with the need for an ad hoc derivation from the Hubbard model. Small, molecular test systems at the dissociated limit are used to compare the functional form against several previously proposed DFT+U-type functionals. The functional derived here yields relative errors below 0.6\% in the total energy of the dissociated s-block dimers as well as the dissociated H+5 ring system, a challenging test case in which the asymmetric, tilted flat plane condition applies. In comparison, bare PBE and PBE+U (using Dudarev's 1998 Hubbard functional) yields relative energetic errors as high as 8.0\% and 20.5\%, respectively.}
+  urldate = {2023-05-11},
+  abstract = {A DFT+U-type corrective functional is derived from first principles to enforce the flat plane condition on localized subspaces, thus dispensing with the need for an ad hoc derivation from the Hubbard model. Small, molecular test systems at the dissociated limit are used to compare the functional form against several previously proposed DFT+U-type functionals. The functional derived here yields relative errors below 0.6\% in the total energy of the dissociated s-block dimers as well as the dissociated H+5 ring system, a challenging test case in which the asymmetric, tilted flat plane condition applies. In comparison, bare PBE and PBE+U (using Dudarev's 1998 Hubbard functional) yields relative energetic errors as high as 8.0\% and 20.5\%, respectively.},
+  copyright = {All rights reserved}
 }
 
 @article{Burgess2023a,
   title = {The convexity condition of density-functional theory},
   author = {Burgess, Andrew C. and Linscott, Edward and O’Regan, David D.},
-  date = {2023-12-01},
-  journaltitle = {The Journal of Chemical Physics},
-  shortjournal = {J. Chem. Phys.},
+  year = {2023},
+  month = dec,
+  journal = {The Journal of Chemical Physics},
   volume = {159},
   number = {21},
   pages = {211102},
   issn = {0021-9606},
   doi = {10.1063/5.0174159},
+  urldate = {2024-11-15},
   abstract = {It has long been postulated that within density-functional theory (DFT), the total energy of a finite electronic system is convex with respect to electron count so that 2Ev[N0] ≤ Ev[N0 − 1] + Ev[N0 + 1]. Using the infinite-separation-limit technique, this Communication proves the convexity condition for any formulation of DFT that is (1) exact for all v-representable densities, (2) size-consistent, and (3) translationally invariant. An analogous result is also proven for one-body reduced density matrix functional theory. While there are known DFT formulations in which the ground state is not always accessible, indicating that convexity does not hold in such cases, this proof, nonetheless, confirms a stringent constraint on the exact exchange–correlation functional. We also provide sufficient conditions for convexity in approximate DFT, which could aid in the development of density-functional approximations. This result lifts a standing assumption in the proof of the piecewise linearity condition with respect to electron count, which has proven central to understanding the Kohn–Sham bandgap and the exchange–correlation derivative discontinuity of DFT.}
 }
 
 @article{Burgess2024,
   title = {Tilted-plane structure of the energy of finite quantum systems},
   author = {Burgess, Andrew C. and Linscott, Edward and O’Regan, David D.},
-  date = {2024-07-12},
-  journaltitle = {Physical Review Letters},
-  shortjournal = {Phys. Rev. Lett.},
+  year = {2024},
+  month = jul,
+  journal = {Physical Review Letters},
   volume = {133},
   number = {2},
   pages = {026404},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.133.026404},
+  urldate = {2024-11-15},
   abstract = {The piecewise linearity condition on the total energy with respect to the total magnetization of finite quantum systems is derived using the infinite-separation-limit technique. This generalizes the well-known constancy condition, related to static correlation error, in approximate density functional theory. The magnetic analog of Koopmans’ theorem in density functional theory is also derived. Moving to fractional electron count, the tilted-plane condition is derived, lifting certain assumptions in previous works. This generalization of the flat-plane condition characterizes the total energy surface of a finite system for all values of electron count 𝑁 and magnetization 𝑀. This result is used in combination with tabulated spectroscopic data to show the flat-plane structure of the oxygen atom, among others. We find that derivative discontinuities with respect to electron count sometimes occur at noninteger values. A diverse set of tilted-plane structures is shown to occur in 𝑑-orbital subspaces, depending on chemical coordination. General occupancy-based total-energy expressions are demonstrated thereby to be necessarily dependent on the symmetry-imposed degeneracies.}
 }
 
 @article{Colonna2022,
   title = {Koopmans spectral functionals in periodic boundary conditions},
   author = {Colonna, Nicola and De Gennaro, Riccardo and Linscott, Edward and Marzari, Nicola},
-  date = {2022-09-13},
-  journaltitle = {Journal of Chemical Theory and Computation},
-  shortjournal = {J. Chem. Theory Comput.},
+  year = {2022},
+  month = sep,
+  journal = {Journal of Chemical Theory and Computation},
   volume = {18},
   number = {9},
   pages = {5435--5448},
   publisher = {American Chemical Society},
   issn = {1549-9618},
   doi = {10.1021/acs.jctc.2c00161},
+  urldate = {2024-11-15},
   abstract = {Koopmans spectral functionals aim to describe simultaneously ground-state properties and charged excitations of atoms, molecules, nanostructures, and periodic crystals. This is achieved by augmenting standard density functionals with simple but physically motivated orbital-density-dependent corrections. These corrections act on a set of localized orbitals that, in periodic systems, resemble maximally localized Wannier functions. At variance with the original, direct supercell implementation (Phys. Rev. X 2018, 8, 021051), we discuss here (i) the complex but efficient formalism required for a periodic boundary code using explicit Brillouin zone sampling and (ii) the calculation of the screened Koopmans corrections with density functional perturbation theory. In addition to delivering improved scaling with system size, the present development makes the calculation of band structures with Koopmans functionals straightforward. The implementation in the open-source Quantum ESPRESSO distribution and the application to prototypical insulating and semiconducting systems are presented and discussed.}
 }
 
@@ -75,27 +82,30 @@
   title = {Bloch's theorem in orbital-density-dependent functionals: {{Band}} structures from {{Koopmans}} spectral functionals},
   shorttitle = {Bloch's theorem in orbital-density-dependent functionals},
   author = {De Gennaro, Riccardo and Colonna, Nicola and Linscott, Edward and Marzari, Nicola},
-  date = {2022-07-05},
-  journaltitle = {Physical Review B},
-  shortjournal = {Phys. Rev. B},
+  year = {2022},
+  month = jul,
+  journal = {Physical Review B},
   volume = {106},
   number = {3},
   pages = {035106},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevB.106.035106},
-  abstract = {Koopmans-compliant functionals provide an orbital-density-dependent framework for an accurate evaluation of spectral properties; they are obtained by imposing a generalized piecewise-linearity condition on the total energy of the system with respect to the occupation of any orbital. In crystalline materials, due to the orbital-density-dependent nature of the functionals, minimization of the total energy to a ground state provides a set of minimizing variational orbitals that are localized and thus break the periodicity of the underlying lattice. Despite this, we show that Bloch symmetry can be preserved and it is possible to describe the electronic states with a band-structure picture, thanks to the Wannier-like character of the variational orbitals. We also present a method to unfold and interpolate the electronic bands from supercell (Γ-point) calculations, which enables us to calculate full band structures with Koopmans-compliant functionals. The results obtained for a set of benchmark semiconductors and insulators show very good agreement with state-of-the-art many-body perturbation theory and experiments, underscoring the reliability of these spectral functionals in predicting band structures.}
+  urldate = {2022-07-08},
+  abstract = {Koopmans-compliant functionals provide an orbital-density-dependent framework for an accurate evaluation of spectral properties; they are obtained by imposing a generalized piecewise-linearity condition on the total energy of the system with respect to the occupation of any orbital. In crystalline materials, due to the orbital-density-dependent nature of the functionals, minimization of the total energy to a ground state provides a set of minimizing variational orbitals that are localized and thus break the periodicity of the underlying lattice. Despite this, we show that Bloch symmetry can be preserved and it is possible to describe the electronic states with a band-structure picture, thanks to the Wannier-like character of the variational orbitals. We also present a method to unfold and interpolate the electronic bands from supercell (Γ-point) calculations, which enables us to calculate full band structures with Koopmans-compliant functionals. The results obtained for a set of benchmark semiconductors and insulators show very good agreement with state-of-the-art many-body perturbation theory and experiments, underscoring the reliability of these spectral functionals in predicting band structures.},
+  copyright = {All rights reserved}
 }
 
 @article{Edgcombe2019,
   title = {Analysis of a capped carbon nanotube by linear-scaling density-functional theory},
-  author = {Edgcombe, C.J. and Masur, S.M. and Linscott, E.B. and Whaley-Baldwin, J.A.J. and Barnes, C.H.W.},
-  date = {2019},
-  journaltitle = {Ultramicroscopy},
+  author = {Edgcombe, C.J. and Masur, S.M. and Linscott, E.B. and {Whaley-Baldwin}, J.A.J. and Barnes, C.H.W.},
+  year = {2019},
+  journal = {Ultramicroscopy},
   volume = {198},
   publisher = {North-Holland},
   issn = {18792723},
   doi = {10.1016/j.ultramic.2018.11.007},
   abstract = {© 2018 Elsevier B.V. The apex region of a capped (5,5) carbon nanotube (CNT) has been modelled with the DFT package ONETEP, using boundary conditions provided by a classical calculation with a conducting surface in place of the CNT. Results from the DFT solution include the Fermi level and the physical distribution and energies of individual orbitals for the CNT tip. Application of an external electric field changes the orbital number of the highest occupied molecular orbital (HOMO) and consequently changes its distribution on the CNT.},
+  copyright = {All rights reserved},
   keywords = {Carbon nanotube,Charge density,Density functional theory,Density of states,Fermi level,Kohn-Sham orbital,Wannier functions}
 }
 
@@ -103,133 +113,144 @@
   title = {On-site and intersite {{Hubbard}} corrections in magnetic monolayers: {{The}} case of {{FePS}}₃ and {{CrI}}₃},
   shorttitle = {On-site and intersite {{Hubbard}} corrections in magnetic monolayers},
   author = {Haddadi, Fatemeh and Linscott, Edward and Timrov, Iurii and Marzari, Nicola and Gibertini, Marco},
-  date = {2024-01-24},
-  journaltitle = {Physical Review Materials},
-  shortjournal = {Phys. Rev. Mater.},
+  year = {2024},
+  month = jan,
+  journal = {Physical Review Materials},
   volume = {8},
   number = {1},
   pages = {014007},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevMaterials.8.014007},
+  urldate = {2024-11-15},
   abstract = {Hubbard-corrected density-functional theory has proven to be successful in addressing self-interaction errors in 3D magnetic materials. However, the effectiveness of this approach for 2D magnetic materials has not been extensively explored. Here, we use PBEsol+𝑈 and its extensions PBEsol+𝑈+𝑉 to investigate the electronic, structural, and vibrational properties of 2D antiferromagnetic FePS3 and ferromagnetic CrI3, and compare the monolayers with their bulk counterparts. Hubbard parameters (on-site 𝑈 and intersite 𝑉) are computed self-consistently using density-functional perturbation theory, thus avoiding any empirical assumptions. We show that for FePS3, the Hubbard corrections are crucial in obtaining the experimentally observed insulating state with the correct crystal symmetry, also providing vibrational frequencies in good agreement with Raman experiments. For ferromagnetic CrI3, we discuss how a straightforward application of Hubbard corrections worsens the results and introduces a spurious separation between spin-majority and minority conduction bands. Promoting the Hubbard 𝑈 to be a spin-resolved parameter—that is, applying different (first-principles) values to the spin-up and spin-down manifolds—recovers a more physical picture of the electronic bands and delivers the best comparison with experiments.}
 }
 
 @article{Ingall2024,
   title = {Accurate and efficient computation of the fundamental bandgap of the vacancy-ordered double perovskite {{Cs}}₂{{TiBr}}₆},
   author = {Ingall, J. E. and Linscott, Edward and Colonna, Nicola and Page, Alister J. and Keast, Vicki J.},
-  date = {2024-06-06},
-  journaltitle = {The Journal of Physical Chemistry C},
-  shortjournal = {J. Phys. Chem. C},
+  year = {2024},
+  month = jun,
+  journal = {The Journal of Physical Chemistry C},
   volume = {128},
   number = {22},
   pages = {9217--9228},
   publisher = {American Chemical Society},
   issn = {1932-7447},
   doi = {10.1021/acs.jpcc.3c07957},
+  urldate = {2024-11-15},
   abstract = {Metal halide perovskites (MHPs) demonstrate an exceptional combination of properties. Rapid progress has extended their application beyond solar cells, light-emitting diodes, photodetectors, and lasers to include memristors, artificial synapse devices, and pressure induced emission. In particular, the vacancy-ordered double perovskite Cs2TiBr6 has been identified as a promising material. The effective characterization of MHPs requires accurate and efficient methods for the calculation of electronic structure. Koopmans compliant (KC) functionals are an accurate and computationally efficient alternative to many-body perturbation theory using the GW approximation but have yet only been validated on a small number of simple materials. In this work, KC functionals were applied to the more complex case of Cs2TiBr6 and gave a zero-temperature fundamental gap of 4.28 eV, in close agreement with the value of 4.44 eV obtained using the accurate, but more computationally expensive, evGW0 approach. The temperature-dependent renormalization of the bandgap has also been investigated and found to be significant. Agreement with the experimental optical bandgaps of 1.76–2.0 eV would also require the inclusion of exciton binding energy.}
 }
 
 @article{Kobayashi2021,
   title = {Virtual computational chemistry teaching laboratories — hands-on at a distance},
   author = {Kobayashi, Rika and Goumans, Theodorus P. M. and Carstensen, N. Ole and Soini, Thomas M. and Marzari, Nicola and Timrov, Iurii and Poncé, Samuel and Linscott, Edward B. and Sewell, Christopher J. and Pizzi, Giovanni and Ramirez, Francisco and Bercx, Marnik and Huber, Sebastiaan P. and Adorf, Carl S. and Talirz, Leopold},
-  date = {2021-10-12},
-  journaltitle = {Journal of Chemical Education},
-  shortjournal = {J. Chem. Educ.},
+  year = {2021},
+  month = oct,
+  journal = {Journal of Chemical Education},
   volume = {98},
   number = {10},
   pages = {3163--3171},
   publisher = {American Chemical Society},
   issn = {0021-9584},
   doi = {10.1021/acs.jchemed.1c00655},
+  urldate = {2024-11-15},
   abstract = {The COVID-19 pandemic disrupted chemistry teaching practices globally as many courses were forced online, necessitating adaptation to the digital platform. The biggest impact was to the practical component of the chemistry curriculum—the so-called wet lab. Naively, it would be thought that computer-based teaching laboratories would have little problem in making the move. However, this is not the case as there are many unrecognized differences between delivering computer-based teaching in-person and virtually: software issues, technology, and classroom management. Consequently, relatively few “hands-on” computational chemistry teaching laboratories are delivered online. In this paper, we describe these issues in more detail and how they can be addressed, drawing on our experience in delivering a third-year computational chemistry course as well as remote hands-on workshops for the Virtual Winter School on Computational Chemistry and the European BIG-MAP project.}
 }
 
 @article{Lee2022,
   title = {Many-body study of iron({{III}})-bound human serum transferrin},
   author = {Lee, Hovan and Weber, Cedric and Linscott, Edward B.},
-  date = {2022-05-26},
-  journaltitle = {The Journal of Physical Chemistry Letters},
-  shortjournal = {J. Phys. Chem. Lett.},
+  year = {2022},
+  month = may,
+  journal = {The Journal of Physical Chemistry Letters},
   volume = {13},
   number = {20},
   pages = {4419--4425},
   publisher = {American Chemical Society},
   doi = {10.1021/acs.jpclett.2c00680},
+  urldate = {2024-11-15},
   abstract = {We present the very first density functional theory and dynamical mean field theory calculations of iron-bound human serum transferrin. Peaks in the optical conductivity at 250, 300, and 450 nm were observed, in line with experimental measurements. Spin multiplet analysis suggests that the ground state is a mixed state with high entropy, indicating the importance of strong electronic correlation in this system’s chemistry.}
 }
 
 @article{Linscott2014,
   title = {Thermally activated local collapse of a flattened dipolar condensate},
   author = {Linscott, E. B. and Blakie, P. B.},
-  date = {2014},
-  journaltitle = {Physical Review A},
-  shortjournal = {Phys. Rev. A},
+  year = {2014},
+  journal = {Physical Review A},
   volume = {90},
   number = {5},
   eprint = {1409.1766v1},
-  eprinttype = {arXiv},
   pages = {1--7},
   issn = {10941622},
-  doi = {10.1103/PhysRevA.90.053605}
+  doi = {10.1103/PhysRevA.90.053605},
+  archiveprefix = {arXiv},
+  copyright = {All rights reserved}
 }
 
 @article{Linscott2018,
   ids = {Linscott2018a},
   title = {Role of spin in the calculation of {{Hubbard U}} and {{Hund}}'s {{J}} parameters from first principles},
   author = {Linscott, Edward B. and Cole, Daniel J. and Payne, Michael C. and O'Regan, David D.},
-  date = {2018-12-26},
-  journaltitle = {Physical Review B},
-  shortjournal = {Phys. Rev. B},
+  year = {2018},
+  month = dec,
+  journal = {Physical Review B},
   volume = {98},
   number = {23},
   pages = {235157},
   publisher = {American Physical Society},
   issn = {2469-9950},
-  doi = {10.1103/PhysRevB.98.235157}
+  doi = {10.1103/PhysRevB.98.235157},
+  urldate = {2019-01-29},
+  copyright = {All rights reserved}
 }
 
 @article{Linscott2020,
   ids = {Linscott2019},
   title = {{{ONETEP}} + {{TOSCAM}}: {{Uniting}} dynamical mean field theory and linear-scaling density functional theory},
   author = {Linscott, Edward B. and Cole, Daniel J. and Hine, Nicholas D. M. and Payne, Michael C. and Weber, Cédric},
-  date = {2020-06-09},
-  journaltitle = {Journal of Chemical Theory and Computation},
-  shortjournal = {J. Chem. Theory Comput.},
+  year = {2020},
+  month = jun,
+  journal = {Journal of Chemical Theory and Computation},
   eprint = {1911.07752},
-  eprinttype = {arXiv},
   publisher = {American Chemical Society (ACS)},
   issn = {1549-9618},
   doi = {10.1021/acs.jctc.0c00162},
-  abstract = {We introduce the unification of dynamical mean field theory (DMFT) and linear-scaling density functional theory (DFT), as recently implemented in ONETEP, a linear-scaling DFT package, and TOSCAM, a DMFT toolbox. This code can account for strongly correlated electronic behavior while simultaneously including the effects of the environment, making it ideally suited for studying complex and heterogeneous systems containing transition metals and lanthanides, such as metalloproteins. We systematically introduce the necessary formalism, which must account for the non-orthogonal basis set used by ONETEP. In order to demonstrate the capabilities of this code, we apply it to carbon monoxide-ligated iron porphyrin and explore the distinctly quantum-mechanical character of the iron \$3d\$ electrons during the process of photodissociation.}
+  urldate = {2020-06-29},
+  abstract = {We introduce the unification of dynamical mean field theory (DMFT) and linear-scaling density functional theory (DFT), as recently implemented in ONETEP, a linear-scaling DFT package, and TOSCAM, a DMFT toolbox. This code can account for strongly correlated electronic behavior while simultaneously including the effects of the environment, making it ideally suited for studying complex and heterogeneous systems containing transition metals and lanthanides, such as metalloproteins. We systematically introduce the necessary formalism, which must account for the non-orthogonal basis set used by ONETEP. In order to demonstrate the capabilities of this code, we apply it to carbon monoxide-ligated iron porphyrin and explore the distinctly quantum-mechanical character of the iron \$3d\$ electrons during the process of photodissociation.},
+  archiveprefix = {arXiv},
+  copyright = {All rights reserved}
 }
 
 @article{Linscott2023,
   title = {koopmans: {{An}} open-source package for accurately and efficiently predicting spectral properties with {{Koopmans}} functionals},
   shorttitle = {koopmans},
   author = {Linscott, Edward B. and Colonna, Nicola and De Gennaro, Riccardo and Nguyen, Ngoc Linh and Borghi, Giovanni and Ferretti, Andrea and Dabo, Ismaila and Marzari, Nicola},
-  date = {2023-08-23},
-  journaltitle = {Journal of Chemical Theory and Computation},
-  shortjournal = {J. Chem. Theory Comput.},
+  year = {2023},
+  month = aug,
+  journal = {Journal of Chemical Theory and Computation},
   volume = {19},
   number = {20},
   pages = {7097--7111},
   publisher = {American Chemical Society},
   issn = {1549-9618},
   doi = {10.1021/acs.jctc.3c00652},
-  abstract = {Over the past decade we have developed Koopmans functionals, a computationally efficient approach for predicting spectral properties with an orbital-density-dependent functional framework. These functionals impose a generalized piecewise linearity condition to the entire electronic manifold, ensuring that orbital energies match the corresponding electron removal/addition energy differences (in contrast to semilocal DFT, where a mismatch between the two lies at the heart of the band gap problem and, more generally, the unreliability of Kohn–Sham orbital energies). This strategy has proven to be very powerful, yielding molecular orbital energies and solid-state band structures with comparable accuracy to many-body perturbation theory but at greatly reduced computational cost while preserving a functional formulation. This paper reviews the theory of Koopmans functionals, discusses the algorithms necessary for their implementation, and introduces koopmans, an open-source package that contains all of the code and workflows needed to perform Koopmans functional calculations and obtain reliable spectral properties of molecules and materials.}
+  urldate = {2023-08-24},
+  abstract = {Over the past decade we have developed Koopmans functionals, a computationally efficient approach for predicting spectral properties with an orbital-density-dependent functional framework. These functionals impose a generalized piecewise linearity condition to the entire electronic manifold, ensuring that orbital energies match the corresponding electron removal/addition energy differences (in contrast to semilocal DFT, where a mismatch between the two lies at the heart of the band gap problem and, more generally, the unreliability of Kohn–Sham orbital energies). This strategy has proven to be very powerful, yielding molecular orbital energies and solid-state band structures with comparable accuracy to many-body perturbation theory but at greatly reduced computational cost while preserving a functional formulation. This paper reviews the theory of Koopmans functionals, discusses the algorithms necessary for their implementation, and introduces koopmans, an open-source package that contains all of the code and workflows needed to perform Koopmans functional calculations and obtain reliable spectral properties of molecules and materials.},
+  copyright = {All rights reserved}
 }
 
 @article{Masur2020,
   title = {Modelling a capped carbon nanotube by linear-scaling density-functional theory},
   author = {Masur, S. M. and Linscott, E. B. and Edgcombe, C. J.},
-  date = {2020-05-01},
-  journaltitle = {Journal of Electron Spectroscopy and Related Phenomena},
-  shortjournal = {J. Electron Spectrosc. Relat. Phenom.},
+  year = {2020},
+  month = may,
+  journal = {Journal of Electron Spectroscopy and Related Phenomena},
   series = {Sources, {{Interaction}} with {{Matter}}, {{Detection}} and {{Analysis}} of {{Low Energy Electrons}} ({{SIMDALEE2}})},
   volume = {241},
   pages = {146896},
   issn = {0368-2048},
   doi = {10.1016/j.elspec.2019.146896},
+  urldate = {2024-11-15},
   abstract = {The apex region of a capped (5,5) carbon nanotube (CNT) has been modelled with the DFT package ONETEP, using boundary conditions provided by a classical calculation with a conducting surface in place of the CNT. Results from the DFT solution include the spatial distribution of charge density, the changes to the highest occupied molecular orbital (HOMO) induced by an external field and a comparison of calculations of total potential energy E with and without exchange-correlation energy EXC. The contribution to the work function from exchange and correlation effects is found to be nearly as much again as that from a purely electrostatic calculation.},
   keywords = {Carbon nanotube,Charge density,Density functional theory,Molecular orbitals,Work function}
 }
@@ -237,55 +258,60 @@
 @article{Moore2024,
   title = {High-throughput determination of {{Hubbard U}} and {{Hund J}} values for transition metal oxides via the linear response formalism},
   author = {Moore, Guy C. and Horton, Matthew K. and Linscott, Edward and Ganose, Alexander M. and Siron, Martin and O'Regan, David D. and Persson, Kristin A.},
-  date = {2024-01-29},
-  journaltitle = {Physical Review Materials},
-  shortjournal = {Phys. Rev. Mater.},
+  year = {2024},
+  month = jan,
+  journal = {Physical Review Materials},
   volume = {8},
   number = {1},
   pages = {014409},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevMaterials.8.014409},
+  urldate = {2024-11-15},
   abstract = {DFT+𝑈 provides a convenient, cost-effective correction for the self-interaction error (SIE) that arises when describing correlated electronic states using conventional approximate density functional theory (DFT). The success of a DFT+𝑈(+𝐽) calculation hinges on the accurate determination of its Hubbard 𝑈 and Hund 𝐽 parameters, and the linear response (LR) methodology has proven to be computationally effective and accurate for calculating these parameters. This study provides a high-throughput computational analysis of the 𝑈 and 𝐽 values for transition metal 𝑑-electron states in a representative set of over 1000 magnetic transition metal oxides (TMOs), providing a frame of reference for researchers who use DFT+𝑈 to study transition metal oxides. In order to perform this high-throughput study, an atomate workflow is developed for calculating 𝑈 and 𝐽 values automatically on massively parallel supercomputing architectures. To demonstrate an application of this workflow, the spin-canting magnetic structure and unit cell parameters of the multiferroic olivine LiNiPO4 are calculated using the computed Hubbard 𝑈 and Hund 𝐽 values for Ni−𝑑 and O−𝑝 states, and are compared with experiment. Both the Ni−𝑑𝑈 and 𝐽 corrections have a strong effect on the Ni-moment canting angle. Additionally, including a O−𝑝𝑈 value results in a significantly improved agreement between the computed lattice parameters and experiment.}
 }
 
 @article{Prentice2020,
   title = {The {{ONETEP}} linear-scaling density functional theory program},
   author = {Prentice, Joseph C. A. and Aarons, Jolyon and Womack, James C. and Allen, Alice E. A. and Andrinopoulos, Lampros and Anton, Lucian and Bell, Robert A. and Bhandari, Arihant and Bramley, Gabriel A. and Charlton, Robert J. and Clements, Rebecca J. and Cole, Daniel J. and Constantinescu, Gabriel and Corsetti, Fabiano and Dubois, Simon M.-M. and Duff, Kevin K. B. and Escartín, José María and Greco, Andrea and Hill, Quintin and Lee, Louis P. and Linscott, Edward and O’Regan, David D. and Phipps, Maximillian J. S. and Ratcliff, Laura E. and Serrano, Álvaro Ruiz and Tait, Edward W. and Teobaldi, Gilberto and Vitale, Valerio and Yeung, Nelson and Zuehlsdorff, Tim J. and Dziedzic, Jacek and Haynes, Peter D. and Hine, Nicholas D. M. and Mostofi, Arash A. and Payne, Mike C. and Skylaris, Chris-Kriton},
-  date = {2020-05-07},
-  journaltitle = {The Journal of Chemical Physics},
-  shortjournal = {J. Chem. Phys.},
+  year = {2020},
+  month = may,
+  journal = {The Journal of Chemical Physics},
   volume = {152},
   number = {17},
   pages = {174111},
   publisher = {AIP Publishing LLCAIP Publishing},
   issn = {0021-9606},
   doi = {10.1063/5.0004445},
+  urldate = {2020-05-07},
   abstract = {We present an overview of the onetep program for linear-scaling density functional theory (DFT) calculations with large basis set (plane-wave) accuracy on parallel computers. The DFT energy is comp...},
+  copyright = {All rights reserved},
   keywords = {⛔ No DOI found}
 }
 
 @article{Schubert2023,
   title = {Testing {{Koopmans}} spectral functionals on the analytically solvable {{Hooke}}’s atom},
   author = {Schubert, Yannick and Marzari, Nicola and Linscott, Edward},
-  date = {2023-04-12},
-  journaltitle = {The Journal of Chemical Physics},
-  shortjournal = {J. Chem. Phys.},
+  year = {2023},
+  month = apr,
+  journal = {The Journal of Chemical Physics},
   volume = {158},
   number = {14},
   pages = {144113},
   issn = {0021-9606},
   doi = {10.1063/5.0138610},
+  urldate = {2024-11-15},
   abstract = {Koopmans spectral functionals are a class of orbital-density-dependent functionals designed to accurately predict spectroscopic properties. They do so markedly better than their Kohn–Sham density-functional theory counterparts, as demonstrated in earlier works on benchmarks of molecules and bulk systems. This work is a complementary study where—instead of comparing against real, many-electron systems—we test Koopmans spectral functionals on Hooke’s atom, a toy two-electron system that has analytical solutions for particular strengths of its harmonic confining potential. As these calculations clearly illustrate, Koopmans spectral functionals do an excellent job of describing Hooke’s atom across a range of confining potential strengths. This work also provides broader insights into the features and capabilities of Koopmans spectral functionals more generally.}
 }
 
 @article{Schubert2024,
   title = {Predicting electronic screening for fast {{Koopmans}} spectral functional calculations},
   author = {Schubert, Yannick and Luber, Sandra and Marzari, Nicola and Linscott, Edward},
-  date = {2024-11-29},
-  journaltitle = {npj Comput. Mater. (accepted)},
+  year = {2024},
+  month = nov,
   eprint = {2406.15205},
-  eprinttype = {arXiv},
   doi = {10.48550/arXiv.2406.15205},
+  urldate = {2024-11-18},
   abstract = {Koopmans spectral functionals are a powerful extension of Kohn-Sham density-functional theory (DFT) that enable the prediction of spectral properties with state-of-the-art accuracy. The success of these functionals relies on capturing the effects of electronic screening through scalar, orbital-dependent parameters. These parameters have to be computed for every calculation, making Koopmans spectral functionals more expensive than their DFT counterparts. In this work, we present a machine-learning model that -- with minimal training -- can predict these screening parameters directly from orbital densities calculated at the DFT level. We show on two prototypical use cases that using the screening parameters predicted by this model, instead of those calculated from linear response, leads to orbital energies that differ by less than 20 meV on average. Since this approach dramatically reduces run-times with minimal loss of accuracy, it will enable the application of Koopmans spectral functionals to classes of problems that previously would have been prohibitively expensive, such as the prediction of temperature-dependent spectral properties. More broadly, this work demonstrates that measuring violations of piecewise linearity (i.e. curvature in total energies with respect to occupancies) can be done efficiently by combining frozen-orbital approximations and machine learning.},
+  archiveprefix = {arXiv},
   keywords = {Condensed Matter - Materials Science,Physics - Chemical Physics,Physics - Computational Physics}
 }
